--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,13 +13,44 @@ services:
     ports:
       - "6379:6379"
 
-  api:
-    build: .
-    command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
+  api_blue:
+    build:
+      context: .
+      dockerfile: Dockerfile
+      args:
+        # Always build blue from main branch
+        GIT_BRANCH: "main"
+    command: uvicorn main:app --host 0.0.0.0 --port 8001 --reload
     volumes:
       - ./app:/app
     ports:
-      - "8000:8000"
+      - "8001:8000"
     depends_on:
       - elasticsearch
       - redis
+
+  api_green:
+    build:
+      context: .
+      dockerfile: Dockerfile
+      args:
+        # Always build green from develop branch
+        GIT_BRANCH: "develop"
+    command: uvicorn main:app --host 0.0.0.0 --port 8002 --reload
+    volumes:
+      - ./app:/app
+    ports:
+      - "8002:8000"
+    depends_on:
+      - elasticsearch
+      - redis
+
+  nginx:
+    image: nginx:latest
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - api_blue
+      - api_green
